Update plugin headers, etc...

--- a/readme.wp
+++ b/readme.wp
@@ -4,8 +4,8 @@ Contributors: jeremyfelt
 Donate link: http://jeremyfelt.com/wordpress/plugins/custom-posts-per-page/
 Tags: admin, administration, settings, archives, posts-per-page, paged, posts, count, number, custom-post-type
 Requires at least: 3.3
-Tested up to: 3.5
-Stable tag: 1.7
+Tested up to: 4.1
+Stable tag: 1.7.1
 
 Custom Posts Per Page provides a settings page in your WordPress admin that allows you to specify how many posts are displayed for different views.
 
@@ -52,6 +52,14 @@ That's it! The current setting for *Blog pages show at most* under *Reading* wil
 1. An overview of the Custom Posts Per Page settings screen.
 
 == Changelog ==
+= 1.7.1 =
+* Switch to semantic versioning. :)
+* Code cleanup, compatibility testing with 4.1.
+* Add some extra sanitization, escaping.
+
+= 1.7 =
+* Update documentation, compatibility testing with 3.5.
+
 = 1.6 =
 * General code cleanup, more documentation
 * Move final_options into a private property for easy passing around the plugin
