Remove backward compatible is_main_query() check
We should be able to rely on is_main_query this many years later.

Or you should upgrade your WordPress install. :)

--- a/readme.wp
+++ b/readme.wp
@@ -3,7 +3,7 @@
 Contributors: jeremyfelt
 Donate link: http://jeremyfelt.com/wordpress/plugins/custom-posts-per-page/
 Tags: admin, administration, settings, archives, posts-per-page, paged, posts, count, number, custom-post-type
-Requires at least: 3.3
+Requires at least: 4.0
 Tested up to: 4.1
 Stable tag: 1.7.1
 
@@ -56,6 +56,7 @@ That's it! The current setting for *Blog pages show at most* under *Reading* wil
 * Switch to semantic versioning. :)
 * Code cleanup, compatibility testing with 4.1.
 * Add some extra sanitization, escaping.
+* Remove backwards compatible `is_main_query()` check. Use WordPress 4.0 or greater.
 
 = 1.7 =
 * Update documentation, compatibility testing with 3.5.
