--- a/languages/custom-posts-per-page.pot
+++ b/languages/custom-posts-per-page.pot
@@ -1,145 +1,125 @@
-# Copyright (C) 2012 Custom Posts Per Page
-# This file is distributed under the same license as the Custom Posts Per Page package.
+# Copyright (C) 2021 Jeremy Felt
+# This file is distributed under the same license as the Custom Posts Per Page plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: Custom Posts Per Page 1.5\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/custom-posts-per-page\n"
-"POT-Creation-Date: 2012-04-07 05:47:48+00:00\n"
+"Project-Id-Version: Custom Posts Per Page 2.0.0-beta\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/custom-posts-per-page\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2012-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2021-03-20T23:04:18+00:00\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"X-Generator: WP-CLI 2.4.0\n"
+"X-Domain: custom-posts-per-page\n"
 
-#: custom-posts-per-page.php:149
-msgid "Settings"
-msgstr ""
-
-#: custom-posts-per-page.php:159
-msgid "Posts Per Page"
-msgstr ""
-
-#. #-#-#-#-#  plugin.pot (Custom Posts Per Page 1.5)  #-#-#-#-#
-#. Plugin Name of the plugin/theme
-#: custom-posts-per-page.php:169
+#. Plugin Name of the plugin
+#: includes/settings.php:28
 msgid "Custom Posts Per Page"
 msgstr ""
 
-#: custom-posts-per-page.php:170
-msgid "Overview"
+#. Plugin URI of the plugin
+msgid "https://github.com/jeremyfelt/Custom-Posts-Per-Page"
 msgstr ""
 
-#: custom-posts-per-page.php:171
-msgid ""
-"The settings below allow you to specify how many posts per page are "
-"displayed to readers depending on the which type of page is being viewed."
+#. Description of the plugin
+msgid "Shows a custom set number of posts depending on the type of page being viewed."
 msgstr ""
 
-#: custom-posts-per-page.php:172
-msgid ""
-"Different values can be set for your your main view, category views, tag "
-"views, author views, archive views, search views, and\r\n"
-"\t\t\tviews for custom post types. For each of these views, a different "
-"setting is available for the first page and subsequent pages. In addition to "
-"these, a default value is available that\r\n"
-"\t\t\tcan be set for any other pages not covered by this."
-msgstr ""
-
-#: custom-posts-per-page.php:175
-msgid ""
-"The initial value used on activation was pulled from the setting <em>Blog "
-"Pages show at most</em> found in the"
-msgstr ""
-
-#: custom-posts-per-page.php:175
-msgid "Reading Settings"
-msgstr ""
-
-#: custom-posts-per-page.php:182
-msgid "Save Changes"
-msgstr ""
-
-#: custom-posts-per-page.php:194
-msgid "Main Index posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:195
-msgid "Category posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:196
-msgid "Archive posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:197
-msgid "Tag posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:198
-msgid "Author posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:199
-msgid "Search posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:200
-msgid "Default posts per page:"
-msgstr ""
-
-#: custom-posts-per-page.php:223
-msgid "Main Settings"
-msgstr ""
-
-#: custom-posts-per-page.php:224
-msgid ""
-"This section allows you to modify page view types that are\r\n"
-"\t\tassociated with WordPress by default. When an option is set to 0, it "
-"will not modify any page requests for\r\n"
-"\t\tthat view and will instead allow default values to pass through."
-msgstr ""
-
-#: custom-posts-per-page.php:227
-msgid "Please Note"
-msgstr ""
-
-#: custom-posts-per-page.php:228
-msgid ""
-"For each setting, the box on the <strong>LEFT</strong> controls the the "
-"number of posts displayed on\tthe first page of that view while\r\n"
-"\t\tthe box on the <strong>RIGHT</strong> controls the number of posts seen "
-"on pages 2, 3, 4, etc... of that view."
-msgstr ""
-
-#: custom-posts-per-page.php:238
-msgid "Custom Post Type Specific Settings"
-msgstr ""
-
-#: custom-posts-per-page.php:239
-msgid ""
-"This section contains a list of all of your registered custom post\r\n"
-"\ttypes. In order to not conflict with other plugins or themes, these are "
-"set to 0 by default. When an option is\r\n"
-"\tset to 0, it will not modify any page requests for that custom post type "
-"archive. For Custom Posts Per Page to\r\n"
-"\tcontrol the number of posts to display, these will need to be changed."
-msgstr ""
-
-#. Plugin URI of the plugin/theme
-msgid "http://www.jeremyfelt.com/wordpress/plugins/custom-posts-per-page/"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid ""
-"Shows a custom set number of posts depending on the type of page being "
-"viewed."
-msgstr ""
-
-#. Author of the plugin/theme
+#. Author of the plugin
 msgid "Jeremy Felt"
 msgstr ""
 
-#. Author URI of the plugin/theme
-msgid "http://www.jeremyfelt.com"
+#. Author URI of the plugin
+msgid "https://jeremyfelt.com"
+msgstr ""
+
+#: custom-posts-per-page.php:27
+msgid "The Custom Posts Per Page WordPress plugin requires PHP 5.6 to function properly. Please upgrade PHP or deactivate the plugin."
+msgstr ""
+
+#: includes/main.php:118
+msgid "Settings"
+msgstr ""
+
+#: includes/settings.php:13
+#: includes/settings.php:14
+msgid "Posts Per Page"
+msgstr ""
+
+#: includes/settings.php:29
+msgid "Overview"
+msgstr ""
+
+#: includes/settings.php:33
+msgid ""
+"Different values can be set for your your main view, category views, tag views, author views, archive views, search views, and\n"
+"\t\t\tviews for custom post types. For each of these views, a different setting is available for the first page and subsequent pages. In\n"
+"\t\t\taddition to these, a default value is available that can be set for any other pages not covered by this."
+msgstr ""
+
+#: includes/settings.php:41
+msgid "The initial value used on activation was pulled from the setting <em>Blog Pages show at most</em> found in the"
+msgstr ""
+
+#: includes/settings.php:41
+msgid "Reading Settings"
+msgstr ""
+
+#: includes/settings.php:48
+msgid "Save Changes"
+msgstr ""
+
+#: includes/settings.php:63
+msgid "Main Index posts per page:"
+msgstr ""
+
+#: includes/settings.php:64
+msgid "Category posts per page:"
+msgstr ""
+
+#: includes/settings.php:65
+msgid "Archive posts per page:"
+msgstr ""
+
+#: includes/settings.php:66
+msgid "Tag posts per page:"
+msgstr ""
+
+#: includes/settings.php:67
+msgid "Author posts per page:"
+msgstr ""
+
+#: includes/settings.php:68
+msgid "Search posts per page:"
+msgstr ""
+
+#: includes/settings.php:69
+msgid "Default posts per page:"
+msgstr ""
+
+#: includes/settings.php:93
+msgid "Main Settings"
+msgstr ""
+
+#: includes/settings.php:96
+msgid ""
+"This section allows you to modify page view types that are\n"
+"\tassociated with WordPress by default. When an option is set to 0, it will not modify any page requests for\n"
+"\tthat view and will instead allow default values to pass through."
+msgstr ""
+
+#: includes/settings.php:105
+msgid "Please Note"
+msgstr ""
+
+#: includes/settings.php:108
+msgid ""
+"For each setting, the box on the <strong>LEFT</strong> controls the the number of posts displayed on\tthe first page of that view while\n"
+"\t\tthe box on the <strong>RIGHT</strong> controls the number of posts seen on pages 2, 3, 4, etc... of that view."
+msgstr ""
+
+#: includes/settings.php:124
+msgid "Custom Post Type Specific Settings"
 msgstr ""
